# rl-connect4

./: .gitignore  .prettierignore  README.md  pyproject.toml
.github/workflows/: ci-pages.yml
configs/: train.yaml  train_self_play.yaml
scripts/: build_tensorboard_report.py  export_policy_onnx.py  run_league.py  serve_web_game.py  train.py  train_self_play.py
scripts/tensorboard/: template.html
src/rl_connect4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rl_connect4/envs/: __init__.py  pettingzoo_connect4.py
src/rl_connect4/eval/: evaluate.py
src/rl_connect4/mcts/: __init__.py  mcts.py  puct.py
src/rl_connect4/policies/: cnn_policy.py
src/rl_connect4/training/: callbacks.py  checkpoints.py  league.py  opponent_pool.py
tests/: test_env_masking.py  test_env_symmetry.py  test_mcts.py  test_opponent_pool.py  test_reward_terminal.py  test_rule_based_policy.py  test_training_smoke.py
web/: app.js  index.html  policy.onnx  styles.css
